--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,62 @@
+/*Global Styles*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 html{
   font-family: 'Poppins', sans-serif;
+  font-size: 62.5%;
+  color: white;
+  background: #ad7df8;
 }
+h2{
+  font-size: 4rem;
+}
+
+.-head{
+  text-align: center;
+  padding: 2rem;
+}
+.-content{
+  width: 90%;
+  margin: auto;
+}
+button{
+  background:  #2b1055;
+  padding: 0.7rem 1rem;
+  border:none;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.432)
+  ,3px 5px 10px rgba(0, 0, 0, 0.411);
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+button:hover{
+  transform: scale(1.01);
+  background: white;
+  color: #2b1055;
+}
+/*Nav bar*/
+
 .logo{
   height: 30px;
   width: 30px;
   border-radius: 50%;
 }
+.nav{
+  position: sticky;
+  top:0 ;
+  z-index: 10;
+  background: #2b1055;
+}
 .navbar{
   display: flex;
-  background: #16395e;
   padding: 0.5rem;
+  width: 90%;
+  margin: auto;
   min-height: 10vh;
   justify-content: space-between;
   align-items: center;
@@ -30,25 +71,142 @@ html{
 .navbar li a {
   text-decoration: none;
   color: white;
+  padding: 0.5rem 1rem;
+  transition: all 0.1 s ease-in;
 }
-.main{
-  min-height: 90vh;
-  background-image: url('/bg.jpg');
-  background-size: cover;
-  background-position: center;
-  color: white;
-  text-shadow: 2px 2px 5px black;
+.navbar li a:hover {
+  color: #2b1055;
+  background: white;
+  border-radius: 2rem;
+}
+
+/*home page*/
+#home{
+  background: linear-gradient(#2b1055, #7597de);
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+}
+#home::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(to top,#3b2957, transparent);
+  width: 100%;
+  height: 10%;
+  z-index: 2;
+}
+.home-img{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
+#moon{
+  mix-blend-mode : lighten;
+  left: -10rem;
+}
+#front{
+  z-index: 2;
+}
+#home-text,#home-text2,.connect-btn{
+  position: relative;
+  top: -15rem;
+  text-align: center;
+  z-index: 1;
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.432)
+                ,5px 5px 5px rgba(0, 0, 0, 0.726);
+}
+#home-text1{
+  font-size: 5rem;
+}
+#home-text2{
+  font-size: 2rem;
 }
 .connect-btn{
-  padding: 0.5rem 1rem;
-  background:  #16395e;
-  border-radius: 0.5rem;
+  top: -12rem;
+  
 }
 .connect-link{
   text-decoration: none;
+  color: white;
+  transition: all 0.1s ease-in;
+}
+.connect-link:hover{
+  color: #2b1055;
+  transform: scale(1.01);
+}
+
+/*about*/
+#about{
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #3b2957, #ad7df8);
+}
+
+/*Inspiration page */
+
+#inspiration{
+  min-height: 100vh;
+  background: #ad7df8;
+}
+/*Contact page*/
+
+#connect{
+  min-height: 26vh;
+  color: white;
+  background: #3b2957;
+  padding-bottom: 4rem;
+  text-align: center;
+}
+.contact-head{
+  color: white;
+  min-height: 16vh;
+  display: grid;
+  place-items: center;
+}
+.contact-content{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 90%;
+  margin: auto;
+}
+.fa{
+  color: white;
+  padding: 1rem;
+  transform: scale(1.4);
+}
+.contact-socials{
+  flex: 1 1 30rem;
+  padding: 1rem 0;
+}
+.contact-form{
+  flex: 1 1 50rem;
+  padding: 1rem 0;
+  min-height: 10vh;
+}
+.email-form{
+  margin: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+label{
+  padding: 0 3rem;
+  font-weight: bold;
+}
+.contact-btn{
+  margin: 1rem;
   color: white;
 }
