--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,17 @@
 /*Global Styles*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@font-face {
+  font-family: "Ruhl";
+  src: url('../assets/fonts/FrankRuhlLibre-Regular.ttf');
+}
+@font-face {
+  font-family: "Ruhl Medium";
+  src: url('../assets/fonts/FrankRuhlLibre-Medium.ttf');
+}
+@font-face {
+  font-family: "Vibes";
+  src: url('../assets/fonts/GreatVibes-Regular.ttf');
+}
 *{
   margin: 0;
   padding: 0;
@@ -18,7 +30,7 @@ h2{
 h3{
   font-size: 3rem;
 }
-p{
+p,a{
   font-size: 2rem;
 }
 .-head{
@@ -54,9 +66,13 @@ button:hover{
 /*Nav bar*/
 
 .logo{
-  height: 30px;
-  width: 30px;
   border-radius: 50%;
+  font-family: "Vibes", sans-serif;
+  animation: opening 1s ease-in-out forwards;
+}
+.hamburger{
+  display: none;
+  pointer-events: none;
 }
 .nav{
   position: sticky;
@@ -247,4 +263,31 @@ label{
 .contact-btn{
   margin: 1rem;
   color: white;
+}
+
+/*media queries*/
+
+@media screen and (max-width: 800px) {
+  .hamburger{
+    display: block;
+    pointer-events:visible;
+    cursor: pointer;
+    z-index: 3;
+  }
+  .nav-items{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 100%;
+    top: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: #ad7df8;
+    transition: transform 1s ease 0s;
+  }
+  .show{
+    transform: translateX(-100%);
+  }
 }
